✅ Test: 변경 부분 단위테스트 작성